# ws_stoch3

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/controller_manager_msgs/: ControllerState.h  (+2 more)
src/: README.md  goalpub.py  pid.py
src/docs/: controller_architecture.md  dev-container.md  imu_configuration.md  joint_calibration.md  ros_docker_install.md  state_machine.md
src/qpOASES/: CMakeLists.txt
src/scripts/: config_servos.py  setup.sh
src/stoch3/: CMakeLists.txt
src/stoch3_analysis/: CMakeLists.txt
src/stoch3_analysis/src/: joint_power.cpp
src/stoch3_control/: CMakeLists.txt  package.xml  stoch3_controller_plugins.xml
src/stoch3_control/config/: leg_controller_gains.yaml  leg_shifts.yaml  linear_policy.yaml  sim_leg_shifts.yaml  stoch3_controllers.yaml
src/stoch3_control/include/stoch3_control/high_level_controllers/: controller_base.h  controller_supervisor.h  linear_policy.h  optimal_foot_forces.h  pose_controller.h  sit_controller.h  stand_controller.h  state_estimator.h  utils.h  walking_controller.h
src/stoch3_control/include/stoch3_control/low_level_controllers/: controller2.h  foot_state_estimator.h  idle_controller.h  leg_controller.h  motor_state_controller.h
src/stoch3_control/src/high_level_controllers/: controller_supervisor.cpp  pose_controller.cpp  sit_controller.cpp  stand_controller.cpp  state_estimator.cpp  utils.cpp  walking_controller.cpp
src/stoch3_control/src/low_level_controllers/: foot_state_estimator.cpp  idle_controller.cpp  leg_controller.cpp  motor_state_controller.cpp
src/stoch3_control/test/: compute_foot_forces.cpp  find_tracking_error.cpp  measure_joint_tracking_performance.cpp  test_calibrate.cpp  test_fk.cpp  test_ik.cpp  test_ik_ellipse.cpp  test_motor_command.cpp  test_nan.cpp  test_nan_input.cpp  test_optimal_foot_forces.cpp  test_sit_stand.cpp  test_sit_stand_action.cpp  test_updown.cpp
src/stoch3_cvx_mpc_libtraj/: CMakeLists.txt
src/stoch3_gazebo/: CMakeLists.txt  robot_hw_sim_plugins.xml
src/stoch3_gazebo/config/: gazebo_ros_control.yaml
src/stoch3_gazebo/include/stoch3_gazebo/: stoch3_robot_hw_sim.h
src/stoch3_gazebo/launch/: stoch3_world.launch
src/stoch3_gazebo/models/: slope_1deg.stl  slope_2deg.stl  slope_5deg.stl
src/stoch3_gazebo/src/: set_model_configuration_node.cpp  stoch3_robot_hw_sim.cpp
src/stoch3_gazebo/test/: bc_tp_load_test.py
src/stoch3_gazebo/world/: slope_1deg.world  slope_2deg.world  slope_5deg.world  test_weight_10kg.world  test_weight_3kg.world  test_weight_5kg.world
src/stoch3_hardware_interface/: CMakeLists.txt  package.xml
src/stoch3_hardware_interface/config/: hardware.yaml  imu_sensor_controller.yaml  joint_bus_id_map.yaml  joint_limits.yaml  joint_motor_id_map.yaml  joint_to_motor_map.yaml  motor_gain_scales.yaml  motor_offsets.yaml
src/stoch3_hardware_interface/include/stoch3_hardware_interface/: estimator_state_interface.h  imu_interface.h  moteus_protocol.h  motor_state_interface.h  pi3hat.h  pi3hat_interface.h  pi3hat_moteus_interface.h  posveleff_command_interface.h  stoch3_hardware_interface.h
src/stoch3_hardware_interface/src/: imu_interface.cpp  pi3hat.cc  pi3hat_interface.cpp  stoch3_hardware_interface.cpp  stoch3_hardware_interface_node.cpp  stoch3_joint_offset_calibration.cpp
src/stoch3_hardware_interface/xsens/xspublic/: CMakeLists.txt
src/stoch3_hardware_interface/xsens/xspublic/xscommon/: CMakeLists.txt
src/stoch3_hardware_interface/xsens/xspublic/xscontroller/: CMakeLists.txt
src/stoch3_hardware_interface/xsens/xspublic/xstypes/: CMakeLists.txt
src/stoch3_lib/: CMakeLists.txt
src/stoch3_lib/include/stoch3_lib/: stoch3_kinematics.h  stoch3_params.h  stoch3_statics.h
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/: .gitignore  README.md
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/bindings/: CMakeLists.txt  pybind11_serial3r.cpp  pybind11_trajectory_core.cpp  test_s3r.py  test_trajectory.py
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/kinematics/: serial2r_kinematics.h  serial3r_kinematics.h
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/slope_estimator/: slope_estimator.h  tof_coordinates.h
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/statics/: serial2r_statics.h  serial3r_statics.h
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/test/: CMakeLists.txt
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/test/kinematics/: CMakeLists.txt  test_kinematics.cpp
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/test/statics/: CMakeLists.txt  test_serial_2r_statics  test_serial_2r_statics.cpp  test_serial_3r_statics  test_serial_3r_statics.cpp
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/test/utils/: CMakeLists.txt  test_kalman_filter.cpp  test_polygon.cpp
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/trajectory_generators/: trajectory_core.h  trajectory_elliptical.h
src/stoch3_lib/include/stoch3_lib/libTrajectoryGenerator/utils/: data.h  filters.h  kalman_filter.h  matrix_op.h  polygon2d.h  state_machine.h  transformations.h  vector_op.h
src/stoch3_lib/test/: test_velocity_kinematics.cpp
src/stoch3_msgs/: CMakeLists.txt  package.xml
src/stoch3_msgs/action/: SitStand.action
src/stoch3_msgs/msg/: ControllerState.msg  LegCommand.msg  LegCommandStamped.msg  LegState.msg  LegStateStamped.msg  MotorState.msg  QuadrupedLegCommand.msg  QuadrupedLegFeedback.msg  QuadrupedLegState.msg  QuadrupedRobotState.msg  RobotCommand.msg
src/stoch3_msgs/srv/: ControllerSupervisorState.srv  Gait.srv
src/stoch3_rviz/: CMakeLists.txt
src/stoch3_rviz/config/: stoch3.rviz
src/stoch3_rviz/launch/: stoch3_rviz.launch
src/stoch3_rviz/src/: stoch3_visualizer.cpp
src/stoch3_state_machine/: CMakeLists.txt
src/stoch3_teleop/: CMakeLists.txt
src/stoch3_teleop/include/stoch3_teleop/: joy_interface.h  joy_teleop.h  key_teleop.h
src/stoch3_teleop/launch/: teleop.launch
src/stoch3_teleop/scripts/: teleop_launch.sh
src/stoch3_teleop/src/: joy_interface_node.cpp  joy_teleop_node.cpp  key_teleop_node.cpp
(+380 files in other folders)
